[microfluidics_design,shenker/snakenbake] Rename shenker.snakenbake to microfluidics_design, add __init__.py.

--- a/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
@@ -38,12 +38,9 @@
    },
    "outputs": [],
    "source": [
-    "import paulssonlab.shenker.snakenbake as s\n",
-    "import paulssonlab.shenker.snakenbake\n",
-    "import fluid\n",
-    "import text\n",
-    "import geometry\n",
-    "import util"
+    "import paulssonlab.microfluidics_design as microfluidics_design\n",
+    "import paulssonlab.microfluidics_design.fluid as fluid\n",
+    "import paulssonlab.microfluidics_design.fov as fov"
    ]
   },
   {
@@ -169,7 +166,7 @@
     "%%time\n",
     "metadata = {}\n",
     "base_params = dict(\n",
-    "    design_func=s.snake,\n",
+    "    design_func=microfluidics_design.snake,\n",
     "    dims=chip_dims,\n",
     "    trench_length=35,\n",
     "    feeding_channel_width=40,\n",
@@ -190,7 +187,7 @@
     "manifold_params = {\n",
     "    **base_params,\n",
     "    **dict(\n",
-    "        design_func=s.manifold_snake,\n",
+    "        design_func=microfluidics_design.manifold_snake,\n",
     "        lanes_per_snake=3,\n",
     "        manifold_input_style=\"bend-out\",\n",
     "        manifold_split=4,\n",
@@ -241,7 +238,7 @@
     "    for p in params\n",
     "]\n",
     "# make chip cells\n",
-    "chips = [s.chip(name, **p) for p, name in zip(params, chip_names)]\n",
+    "chips = [microfluidics_design.chip(name, **p) for p, name in zip(params, chip_names)]\n",
     "# calculate FOV info and overlay FOVs on chip cells\n",
     "grid_metadata = {}\n",
     "draw_grid = True\n",
@@ -270,9 +267,9 @@
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "wafer_diameter = 3 * u.inch\n",
     "alignment_mark_position = wafer_diameter / 2 - 0.2 * u.inch\n",
-    "main_cell = s.wafer(\n",
+    "main_cell = microfluidics_design.wafer(\n",
     "    chips,\n",
-    "    label_right=\"Basilisk\\n JQS/DE/YG 230327\",\n",
+    "    label_right=\"Basilisk\\n JQS/DE/YG 230328\",\n",
     "    label_left=wafer_manifest,\n",
     "    label=True,\n",
     "    mask=False,\n",
@@ -281,7 +278,7 @@
     "    alignment_mark_position=alignment_mark_position.to(u.um).magnitude,\n",
     ")\n",
     "MAX_POINTS = 2000  # LayoutEditor uses 8191, gdstk default is 199\n",
-    "s.write_gds(main_cell, \"designs/230327basilisk.gds\", max_points=MAX_POINTS)"
+    "microfluidics_design.write_gds(main_cell, \"designs/230328basilisk.gds\", max_points=MAX_POINTS)"
    ]
   },
   {
