[microfluidics_design] WIP improved FOV grid calculation.
- get_fov_packings handles arbitrary sequences of active region heights.
- _get_fov_graph figures out which cycles of packings tile active regions.
- get_fov_grids correctly generates origin_y and offsets_y.
- get_fov_grids_df, draw_fov_grid WIP
- fov_plot makes a simple visualization, mostly used to help debugging get_fov_packings and get_fov_grids.
- fov_plot_offsets takes the output of get_fov_grids and calls fov_plot.

--- a/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
@@ -76,7 +76,7 @@
     "fov_dims = {}\n",
     "for camera, (pixel_size, fov_dim) in camera_dims.items():\n",
     "    for mag in mags:\n",
-    "        fov_dims[f\"{camera} {mag}x\"] = fov_dim * pixel_size / mag"
+    "        fov_dims[f\"{camera} {mag}x\"] = np.floor(fov_dim * pixel_size / mag).astype(np.int32)"
    ]
   },
   {
@@ -88,27 +88,32 @@
    "outputs": [],
    "source": [
     "def print_flow_info(height, flow_rate, mu, nu, metadata):\n",
-    "    for name, md in metadata.items():\n",
-    "        R_, extra = fluid.snake_resistance(\n",
-    "            height, md, length_unit=u.um, return_extra=True\n",
+    "    for chip_name, md in metadata.items():\n",
+    "        flow_info = fluid.snake_flow(\n",
+    "            height,\n",
+    "            md,\n",
+    "            length_unit=u.um,\n",
     "        )\n",
-    "        R = R_ * mu\n",
-    "        # print('R', R.to(u.mbar * u.min / u.uL))\n",
-    "        delta_P = R * flow_rate\n",
-    "        print(f\"{name}: {delta_P.to(u.bar)}\")\n",
-    "        print(\n",
-    "            f\"    flow rate: {flow_rate} ({flow_rate.to(u.milliliters/u.hour)}, {flow_rate.to(u.milliliters/u.day)})\"\n",
-    "        )\n",
-    "        if \"flow_nonuniformity\" in extra:\n",
-    "            print(f\"    flow nonuniformity: {extra['flow_nonuniformity']}\")\n",
-    "        if \"manifold_width\" in md:\n",
-    "            L_e = fluid.entrance_length(\n",
-    "                height,\n",
-    "                md[\"manifold_width\"] * u.um,\n",
-    "                flow_rate,\n",
-    "                nu,\n",
+    "        print(f\"{chip_name}:\")\n",
+    "        for input_name, input_flow in flow_info.items():\n",
+    "            R = input_flow[\"R\"] * mu\n",
+    "            delta_P = R * flow_rate\n",
+    "            print(f\"    {input_name}: {delta_P.to(u.bar):.2f}\")\n",
+    "            print(\n",
+    "                f\"        flow rate: {flow_rate:.0f~#P} ({flow_rate.to(u.milliliters/u.hour):.1f~#P}, {flow_rate.to(u.milliliters/u.day):.0f~#P})\"\n",
     "            )\n",
-    "            print(f\"    entrance length: {L_e}\")"
+    "            if \"flow_nonuniformity\" in input_flow:\n",
+    "                print(\n",
+    "                    f\"        flow nonuniformity: {input_flow['flow_nonuniformity']:.2f}\"\n",
+    "                )\n",
+    "            if \"manifold_width\" in md:\n",
+    "                L_e = fluid.entrance_length(\n",
+    "                    height,\n",
+    "                    md[\"manifold_width\"] * u.um,\n",
+    "                    flow_rate,\n",
+    "                    nu,\n",
+    "                )\n",
+    "                print(f\"        entrance length: {L_e}\")"
    ]
   },
   {
@@ -131,7 +136,7 @@
     "chip_dims0 = np.array([33e3, 18e3])\n",
     "# chip_dims0 = np.array([23e3, 13e3])\n",
     "# chip_dims = np.array([38e3, 19e3])\n",
-    "chip_dims = np.array([35e3, 19e3])"
+    "chip_dims = np.array([40e3, 19e3])"
    ]
   },
   {
@@ -169,8 +174,8 @@
     "    design_func=microfluidics_design.snake,\n",
     "    dims=chip_dims,\n",
     "    trench_length=35,\n",
-    "    feeding_channel_width=40,\n",
-    "    trench_gap=20,\n",
+    "    feeding_channel_width=35,\n",
+    "    trench_gap=15,\n",
     "    # trench_width=1.4,\n",
     "    trench_spacing=2.1,\n",
     "    trench_margin=0,\n",
@@ -240,36 +245,36 @@
     "# make chip cells\n",
     "chips = [microfluidics_design.chip(name, **p) for p, name in zip(params, chip_names)]\n",
     "# calculate FOV info and overlay FOVs on chip cells\n",
-    "grid_metadata = {}\n",
-    "draw_grid = True\n",
-    "for chip_name, chip in zip(chip_names, chips):\n",
-    "    chip_grid_metadata = fov.get_grid_metadata(\n",
-    "        fov_dims, metadata[chip_name], skip_first=True\n",
-    "    )\n",
-    "    grid_metadata[chip_name] = chip_grid_metadata\n",
-    "    if draw_grid:\n",
-    "        fov.draw_grid_overlay(\n",
-    "            chip,\n",
-    "            metadata[chip_name],\n",
-    "            fov_dims,\n",
-    "            chip_grid_metadata,\n",
-    "            center_margins=False,\n",
-    "            rotate=False,\n",
-    "        )\n",
-    "grid_df = pd.concat(\n",
-    "    {\n",
-    "        k: pd.DataFrame(v.values()).set_index(\"fov_name\")\n",
-    "        for k, v in grid_metadata.items()\n",
-    "    },\n",
-    "    names=[\"chip\"],\n",
-    ")\n",
+    "# grid_metadata = {}\n",
+    "# draw_grid = True\n",
+    "# for chip_name, chip in zip(chip_names, chips):\n",
+    "#     chip_grid_metadata = fov.get_grid_metadata(\n",
+    "#         fov_dims, metadata[chip_name], skip_first=True\n",
+    "#     )\n",
+    "#     grid_metadata[chip_name] = chip_grid_metadata\n",
+    "#     if draw_grid:\n",
+    "#         fov.draw_grid_overlay(\n",
+    "#             chip,\n",
+    "#             metadata[chip_name],\n",
+    "#             fov_dims,\n",
+    "#             chip_grid_metadata,\n",
+    "#             center_margins=False,\n",
+    "#             rotate=False,\n",
+    "#         )\n",
+    "# grid_df = pd.concat(\n",
+    "#     {\n",
+    "#         k: pd.DataFrame(v.values()).set_index(\"fov_name\")\n",
+    "#         for k, v in grid_metadata.items()\n",
+    "#     },\n",
+    "#     names=[\"chip\"],\n",
+    "# )\n",
     "# lay out wafer, output design\n",
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "wafer_diameter = 3 * u.inch\n",
     "alignment_mark_position = wafer_diameter / 2 - 0.2 * u.inch\n",
     "main_cell = microfluidics_design.wafer(\n",
     "    chips,\n",
-    "    label_right=\"Basilisk\\n JQS/DE/YG 230328\",\n",
+    "    label_right=\"Basilisk\\n JQS/DE/YG 230402\",\n",
     "    label_left=wafer_manifest,\n",
     "    label=True,\n",
     "    mask=False,\n",
@@ -278,7 +283,9 @@
     "    alignment_mark_position=alignment_mark_position.to(u.um).magnitude,\n",
     ")\n",
     "MAX_POINTS = 2000  # LayoutEditor uses 8191, gdstk default is 199\n",
-    "microfluidics_design.write_gds(main_cell, \"designs/230328basilisk.gds\", max_points=MAX_POINTS)"
+    "microfluidics_design.write_gds(\n",
+    "    main_cell, \"designs/230402basilisk_s4.gds\", max_points=MAX_POINTS\n",
+    ")"
    ]
   },
   {
@@ -300,7 +307,7 @@
    },
    "outputs": [],
    "source": [
-    "{k: v[\"trenches_per_input\"] for k, v in metadata.items()}"
+    "{k: [x[\"num_trenches\"] for x in v[\"trench_info\"].values()] for k, v in metadata.items()}"
    ]
   },
   {
@@ -322,7 +329,7 @@
    },
    "outputs": [],
    "source": [
-    "{k: v[\"lanes_per_input\"] for k, v in metadata.items()}"
+    "{k: [x[\"num_lanes\"] for x in v[\"input_info\"].values()] for k, v in metadata.items()}"
    ]
   },
   {
@@ -400,13 +407,7 @@
    },
    "outputs": [],
    "source": [
-    "# active, inactive, active, inactive...\n",
-    "trench_length = 35\n",
-    "feeding_channel_width = 40\n",
-    "trench_gap = 20\n",
-    "region_lengths = [trench_length, feeding_channel_width, trench_length, trench_gap]\n",
-    "num_regions = len(region_lengths)\n",
-    "fov = fov_dims[\"iris15 20x\"][1]"
+    "metadata.keys()"
    ]
   },
   {
@@ -417,17 +418,8 @@
    },
    "outputs": [],
    "source": [
-    "def next_transition(x0, region_lengths):\n",
-    "    num_regions = len(region_lengths)\n",
-    "    total_length = sum(region_lengths)\n",
-    "    x0_wraparound, x0 = divmod(x0, total_length)\n",
-    "    x = 0\n",
-    "    region = 0\n",
-    "    while True:\n",
-    "        x += region_lengths[region]\n",
-    "        if x > x0:\n",
-    "            return x + x0_wraparound * total_length, region\n",
-    "        region = (region + 1) % num_regions"
+    "chip_name = \"Basilisk S4 LS3 FC30 L35 W1.4 TS2.1 TG15\"\n",
+    "fov_name = \"iris15 20x\""
    ]
   },
   {
@@ -438,7 +430,7 @@
    },
    "outputs": [],
    "source": [
-    "2960 * 4.25 / 20"
+    "(np.array([0.5, 1.0])).astype(np.int32)"
    ]
   },
   {
@@ -449,7 +441,8 @@
    },
    "outputs": [],
    "source": [
-    "next_transition(35, region_lengths)"
+    "trench_md = metadata[chip_name][\"trench_info\"][0]\n",
+    "trench_md"
    ]
   },
   {
@@ -460,29 +453,11 @@
    },
    "outputs": [],
    "source": [
-    "def fov_positions(fov_height, region_lengths):\n",
-    "    total_length = sum(region_lengths)\n",
-    "    configs = []\n",
-    "    x = 0\n",
-    "    while x < total_length:\n",
-    "        new_top, top_idx = next_transition(x, region_lengths)\n",
-    "        new_bottom, bottom_idx = next_transition(x + fov_height, region_lengths)\n",
-    "        top_margin = new_top - x\n",
-    "        bottom_margin = new_bottom - (x + fov_height)\n",
-    "        if top_idx % 2 == 1 and bottom_idx % 2 == 1:\n",
-    "            configs.append(\n",
-    "                {\n",
-    "                    \"top\": x,\n",
-    "                    \"bottom\": x + fov_height,\n",
-    "                    \"top_margin\": top_margin,\n",
-    "                    \"bottom_margin\": bottom_margin,\n",
-    "                }\n",
-    "            )\n",
-    "        if top_margin < bottom_margin:\n",
-    "            x = new_top\n",
-    "        else:\n",
-    "            x = new_bottom - fov_height\n",
-    "    return configs"
+    "# region_heights = [35, 30, 35, 15]\n",
+    "# region_heights = [35, 40, 35, 20]\n",
+    "# region_heights = [35, 40, 35, 20, 20, 20]\n",
+    "region_heights = [35, 90, 35, 20]\n",
+    "total_height = sum(region_heights)"
    ]
   },
   {
@@ -493,7 +468,7 @@
    },
    "outputs": [],
    "source": [
-    "(370 + 20) % total_length"
+    "fov_dims[fov_name][1]"
    ]
   },
   {
@@ -504,7 +479,7 @@
    },
    "outputs": [],
    "source": [
-    "fov"
+    "packings = fov.get_fov_packings(fov_dims[fov_name][1], region_heights)"
    ]
   },
   {
@@ -515,15 +490,205 @@
    },
    "outputs": [],
    "source": [
-    "repeats = int((2 * fov) // total_length)\n",
-    "plt.figure(figsize=(12, 2))\n",
-    "plt.step(\n",
-    "    np.concatenate(((0, 0), np.cumsum(region_lengths * repeats))),\n",
-    "    np.concatenate(((0, 1), np.arange(len(region_lengths) * repeats) % 2 == 0)),\n",
-    "    where=\"pre\",\n",
+    "graph = fov._get_fov_graph(packings, total_height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import networkx as nx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "nx.draw(graph, with_labels=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "list(nx.simple_cycles(graph))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "packings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov.fov_plot([35, 71, 160], fov_dims[fov_name][1], region_heights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fov_dims[fov_name][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "755-180"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov.fov_plot([160, 755+35, (755+35)+(700-71), (755+35)+(700-71)], fov_dims[fov_name][1], region_heights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov.fov_plot([160,71], fov_dims[fov_name][1], region_heights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov.fov_plot([35.5, 575.5, 1115.5, 1115.5+540], fov_dims[fov_name][1], region_heights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov_grids = fov.get_fov_grids(\n",
+    "    fov_dims[fov_name][1],\n",
+    "    region_heights,\n",
+    "    center_margins=True,\n",
+    "    skip=None,\n",
     ")\n",
-    "y = 56\n",
-    "plt.plot([0, y, y, y + fov, y + fov], [0, 0, 0.5, 0.5, 0])"
+    "fov_grids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov.fov_plot_offsets(fov_grids[5], fov_dims[fov_name][1], region_heights, num=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov.get_fov_plot_ys(fov_grids[5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov.fov_plot([35.5, 575.5, 1206.0, 1835.5], fov_dims[fov_name][1], region_heights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov.fov_plot_offsets(fov_grids[2], fov_dims[fov_name][1], region_heights, num=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov.fov_plot([35.5, 575.5, 1115.5, 1115.5+540], fov_dims[fov_name][1], region_heights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov.get_grid_metadata(fov_dims, metadata[\"Basilisk S4 LS3 FC40 L35 W1.4 TS2.1 TG20\"])"
    ]
   },
   {
@@ -531,35 +696,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for start_region in range(num_regions, 2):\n",
-    "    region = start_region\n",
-    "    position = 0\n",
-    "    while True:\n",
-    "        if position + region_lengths[region] <= fov:\n",
-    "            position += region_lengths[region]\n",
-    "            region = (region + 1) % num_regions\n",
-    "        else:\n",
-    "            fovs.append(dict(margin=))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# start in every inactive region (even region)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "{\"margin\": 30, \"start_region\": 0, \"end_region\": 0}"
-   ]
+   "source": []
   }
  ],
  "metadata": {
