[microfluidics_design] WIP fov.
- get_fov_positions to generate iterable of positions from origin, offsets.
- renamed get_fov_grids to get_fov_grids_y
- calculate margin/num_active in get_fov_grids_y
- get_fov_grids returns nested dict of lists. works.
- get_fov_grids_df is the same, but returns a DataFrame. works.
- WIP draw_fov_cell, draw_fov_grid. positions are incorrect. does not handle center_margin, rotation.

--- a/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
@@ -245,29 +245,26 @@
     "# make chip cells\n",
     "chips = [microfluidics_design.chip(name, **p) for p, name in zip(params, chip_names)]\n",
     "# calculate FOV info and overlay FOVs on chip cells\n",
-    "# grid_metadata = {}\n",
-    "# draw_grid = True\n",
-    "# for chip_name, chip in zip(chip_names, chips):\n",
-    "#     chip_grid_metadata = fov.get_grid_metadata(\n",
-    "#         fov_dims, metadata[chip_name], skip_first=True\n",
-    "#     )\n",
-    "#     grid_metadata[chip_name] = chip_grid_metadata\n",
-    "#     if draw_grid:\n",
-    "#         fov.draw_grid_overlay(\n",
-    "#             chip,\n",
-    "#             metadata[chip_name],\n",
-    "#             fov_dims,\n",
-    "#             chip_grid_metadata,\n",
-    "#             center_margins=False,\n",
-    "#             rotate=False,\n",
-    "#         )\n",
-    "# grid_df = pd.concat(\n",
-    "#     {\n",
-    "#         k: pd.DataFrame(v.values()).set_index(\"fov_name\")\n",
-    "#         for k, v in grid_metadata.items()\n",
-    "#     },\n",
-    "#     names=[\"chip\"],\n",
-    "# )\n",
+    "fov_grid_df = {}\n",
+    "draw_fov_grid = True\n",
+    "for chip_name, chip in zip(chip_names, chips):\n",
+    "    chip_fov_grid_df = fov.get_fov_grids_df(\n",
+    "        fov_dims, metadata[chip_name], center_margins=False, skip=None\n",
+    "    )\n",
+    "    fov_grid_df[chip_name] = chip_fov_grid_df\n",
+    "    if draw_fov_grid:\n",
+    "        fov_grid_to_draw = chip_fov_grid_df.xs(pd.IndexSlice[\"iris15 20x\",:,:],drop_level=False)\n",
+    "        #fov_grid_to_draw = chip_fov_grid_df\n",
+    "        fov.draw_fov_grid(\n",
+    "            chip,\n",
+    "            metadata[chip_name],\n",
+    "            fov_grid_to_draw,\n",
+    "            rotate=False,\n",
+    "        )\n",
+    "fov_grid_df = pd.concat(\n",
+    "    fov_grid_df,\n",
+    "    names=[\"chip\"],\n",
+    ")\n",
     "# lay out wafer, output design\n",
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "wafer_diameter = 3 * u.inch\n",
@@ -286,6 +283,28 @@
     "microfluidics_design.write_gds(\n",
     "    main_cell, \"designs/230402basilisk_s4.gds\", max_points=MAX_POINTS\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov_grid_to_draw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "chip_fov_grid_df"
    ]
   },
   {
@@ -688,15 +707,41 @@
    },
    "outputs": [],
    "source": [
-    "fov.get_grid_metadata(fov_dims, metadata[\"Basilisk S4 LS3 FC40 L35 W1.4 TS2.1 TG20\"])"
+    "metadata.keys()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "chip_name = 'Basilisk S4 LS3 FC35 L35 W1.3/1.5 TS2.1 TG15'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "d = fov.get_fov_grids_df(fov_dims, metadata[chip_name])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "d.xs(pd.IndexSlice[\"iris15 20x\",:,:],drop_level=False)"
+   ]
   }
  ],
  "metadata": {
