[microfluidics_design] draw_fov_grids works.

--- a/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
@@ -245,24 +245,27 @@
     "# make chip cells\n",
     "chips = [microfluidics_design.chip(name, **p) for p, name in zip(params, chip_names)]\n",
     "# calculate FOV info and overlay FOVs on chip cells\n",
-    "fov_grid_df = {}\n",
-    "draw_fov_grid = True\n",
+    "fov_grids_df = {}\n",
+    "draw_fov_grids = True\n",
+    "center_margins = True\n",
+    "rotate = True\n",
     "for chip_name, chip in zip(chip_names, chips):\n",
-    "    chip_fov_grid_df = fov.get_fov_grids_df(\n",
-    "        fov_dims, metadata[chip_name], center_margins=False, skip=None\n",
+    "    chip_fov_grids_df = fov.get_fov_grids_df(\n",
+    "        fov_dims, metadata[chip_name], center_margins=center_margins, skip=None\n",
     "    )\n",
-    "    fov_grid_df[chip_name] = chip_fov_grid_df\n",
-    "    if draw_fov_grid:\n",
-    "        fov_grid_to_draw = chip_fov_grid_df.xs(pd.IndexSlice[\"iris15 20x\",:,:],drop_level=False)\n",
-    "        #fov_grid_to_draw = chip_fov_grid_df\n",
-    "        fov.draw_fov_grid(\n",
+    "    fov_grids_df[chip_name] = chip_fov_grids_df\n",
+    "    if draw_fov_grids:\n",
+    "        #fov_grids_to_draw = chip_fov_grids_df.xs(pd.IndexSlice[\"iris15 20x\",:,:],drop_level=False)\n",
+    "        fov_grids_to_draw = chip_fov_grids_df\n",
+    "        fov.draw_fov_grids(\n",
     "            chip,\n",
     "            metadata[chip_name],\n",
-    "            fov_grid_to_draw,\n",
-    "            rotate=False,\n",
+    "            fov_grids_to_draw,\n",
+    "            center_margins=center_margins,\n",
+    "            rotate=rotate,\n",
     "        )\n",
-    "fov_grid_df = pd.concat(\n",
-    "    fov_grid_df,\n",
+    "fov_grids_df = pd.concat(\n",
+    "    fov_grids_df,\n",
     "    names=[\"chip\"],\n",
     ")\n",
     "# lay out wafer, output design\n",
@@ -283,28 +286,6 @@
     "microfluidics_design.write_gds(\n",
     "    main_cell, \"designs/230402basilisk_s4.gds\", max_points=MAX_POINTS\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov_grid_to_draw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "chip_fov_grid_df"
    ]
   },
   {
@@ -437,19 +418,9 @@
    },
    "outputs": [],
    "source": [
-    "chip_name = \"Basilisk S4 LS3 FC30 L35 W1.4 TS2.1 TG15\"\n",
+    "#chip_name = \"Basilisk S4 LS3 FC30 L35 W1.4 TS2.1 TG15\"\n",
+    "chip_name = \"Basilisk S4 LS3 FC35 L35 W1.4 TS2.1 TG15\"\n",
     "fov_name = \"iris15 20x\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "(np.array([0.5, 1.0])).astype(np.int32)"
    ]
   },
   {
@@ -475,19 +446,9 @@
     "# region_heights = [35, 30, 35, 15]\n",
     "# region_heights = [35, 40, 35, 20]\n",
     "# region_heights = [35, 40, 35, 20, 20, 20]\n",
-    "region_heights = [35, 90, 35, 20]\n",
+    "#region_heights = [35, 90, 35, 20]\n",
+    "region_heights = trench_md[\"region_heights\"]\n",
     "total_height = sum(region_heights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov_dims[fov_name][1]"
    ]
   },
   {
@@ -564,81 +525,10 @@
    },
    "outputs": [],
    "source": [
-    "fov.fov_plot([35, 71, 160], fov_dims[fov_name][1], region_heights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fov_dims[fov_name][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "755-180"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov.fov_plot([160, 755+35, (755+35)+(700-71), (755+35)+(700-71)], fov_dims[fov_name][1], region_heights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov.fov_plot([160,71], fov_dims[fov_name][1], region_heights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov.fov_plot([35.5, 575.5, 1115.5, 1115.5+540], fov_dims[fov_name][1], region_heights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov_grids = fov.get_fov_grids(\n",
+    "fov_grids = fov.get_fov_grids_y(\n",
     "    fov_dims[fov_name][1],\n",
     "    region_heights,\n",
-    "    center_margins=True,\n",
+    "    center_margins=False,\n",
     "    skip=None,\n",
     ")\n",
     "fov_grids"
@@ -652,95 +542,7 @@
    },
    "outputs": [],
    "source": [
-    "fov.fov_plot_offsets(fov_grids[5], fov_dims[fov_name][1], region_heights, num=8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov.get_fov_plot_ys(fov_grids[5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov.fov_plot([35.5, 575.5, 1206.0, 1835.5], fov_dims[fov_name][1], region_heights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov.fov_plot_offsets(fov_grids[2], fov_dims[fov_name][1], region_heights, num=6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov.fov_plot([35.5, 575.5, 1115.5, 1115.5+540], fov_dims[fov_name][1], region_heights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "metadata.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "chip_name = 'Basilisk S4 LS3 FC35 L35 W1.3/1.5 TS2.1 TG15'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "d = fov.get_fov_grids_df(fov_dims, metadata[chip_name])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "d.xs(pd.IndexSlice[\"iris15 20x\",:,:],drop_level=False)"
+    "fov.fov_plot_offsets(fov_grids[0], fov_dims[fov_name][1], region_heights, num=8)"
    ]
   }
  ],
