[microfluidics_design] WIP FOV padding.

--- a/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
@@ -251,7 +251,7 @@
     "rotate = True\n",
     "for chip_name, chip in zip(chip_names, chips):\n",
     "    chip_fov_grids_df = fov.get_fov_grids_df(\n",
-    "        fov_dims, metadata[chip_name], center_margins=center_margins, skip=None\n",
+    "        fov_dims, metadata[chip_name], center_margins=center_margins,\n",
     "    )\n",
     "    fov_grids_df[chip_name] = chip_fov_grids_df\n",
     "    if draw_fov_grids:\n",
@@ -269,12 +269,12 @@
     "    names=[\"chip\"],\n",
     ")\n",
     "# lay out wafer, output design\n",
-    "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
+    "wafer_manifest = \"\\n\".join([f\"{wafer_id}.{chip_id}) \" + name for chip_id, name in enumerate(chip_names, 1)])\n",
     "wafer_diameter = 3 * u.inch\n",
     "alignment_mark_position = wafer_diameter / 2 - 0.2 * u.inch\n",
     "main_cell = microfluidics_design.wafer(\n",
     "    chips,\n",
-    "    label_right=\"Basilisk\\n JQS/DE/YG 230402\",\n",
+    "    label_right=\"Basilisk\\n JQS/DE/YG 230410\",\n",
     "    label_left=wafer_manifest,\n",
     "    label=True,\n",
     "    mask=False,\n",
@@ -284,7 +284,7 @@
     ")\n",
     "MAX_POINTS = 2000  # LayoutEditor uses 8191, gdstk default is 199\n",
     "microfluidics_design.write_gds(\n",
-    "    main_cell, \"designs/230402basilisk_s4.gds\", max_points=MAX_POINTS\n",
+    "    main_cell, \"designs/230410basilisk_s4.gds\", max_points=MAX_POINTS\n",
     ")"
    ]
   },
@@ -365,7 +365,7 @@
    },
    "outputs": [],
    "source": [
-    "grid_df.loc[pd.IndexSlice[:, [\"iris15 20x\", \"iris9 20x\", \"bsi 40x\"]], :].round(2)"
+    "fov_grids_df.loc[pd.IndexSlice[:, [\"iris15 20x\", \"iris9 20x\"]], :].round(2)"
    ]
   },
   {
@@ -387,16 +387,6 @@
    "metadata": {},
    "source": [
     "# FOVs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# skip_first -> offset_active_regions = 0, -1, +1 (in draw_fov_grid)\n",
-    "# give offset sequence for each graph cycle and each offset_active_regions"
    ]
   },
   {
@@ -446,8 +436,8 @@
     "# region_heights = [35, 30, 35, 15]\n",
     "# region_heights = [35, 40, 35, 20]\n",
     "# region_heights = [35, 40, 35, 20, 20, 20]\n",
-    "#region_heights = [35, 90, 35, 20]\n",
-    "region_heights = trench_md[\"region_heights\"]\n",
+    "region_heights = [35, 90, 35, 20]\n",
+    "#region_heights = trench_md[\"region_heights\"]\n",
     "total_height = sum(region_heights)"
    ]
   },
@@ -529,7 +519,8 @@
     "    fov_dims[fov_name][1],\n",
     "    region_heights,\n",
     "    center_margins=False,\n",
-    "    skip=None,\n",
+    "    allow_skipping=False,\n",
+    "    padding=1,\n",
     ")\n",
     "fov_grids"
    ]
@@ -542,8 +533,37 @@
    },
    "outputs": [],
    "source": [
-    "fov.fov_plot_offsets(fov_grids[0], fov_dims[fov_name][1], region_heights, num=8)"
+    "fov.fov_plot_offsets(fov_grids[2], fov_dims[fov_name][1], region_heights, num=8)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov.fov_plot_offsets(fov_grids[3], fov_dims[fov_name][1], region_heights, num=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov.fov_plot([35, 190, 400], fov_dims[fov_name][1], region_heights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
