--- a/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
@@ -247,11 +247,13 @@
     "# calculate FOV info and overlay FOVs on chip cells\n",
     "fov_grids_df = {}\n",
     "draw_fov_grids = True\n",
-    "center_margins = True\n",
-    "rotate = True\n",
+    "center_margins = False\n",
+    "rotate = False\n",
+    "top_shift = 1\n",
+    "bottom_shift = 0\n",
     "for chip_name, chip in zip(chip_names, chips):\n",
     "    chip_fov_grids_df = fov.get_fov_grids_df(\n",
-    "        fov_dims, metadata[chip_name], center_margins=center_margins,\n",
+    "        fov_dims, metadata[chip_name], center_margins=center_margins, top_shift=top_shift, bottom_shift=bottom_shift,\n",
     "    )\n",
     "    fov_grids_df[chip_name] = chip_fov_grids_df\n",
     "    if draw_fov_grids:\n",
@@ -274,7 +276,7 @@
     "alignment_mark_position = wafer_diameter / 2 - 0.2 * u.inch\n",
     "main_cell = microfluidics_design.wafer(\n",
     "    chips,\n",
-    "    label_right=\"Basilisk\\n JQS/DE/YG 230410\",\n",
+    "    label_right=\"Basilisk\\n JQS/DE/YG 230412\",\n",
     "    label_left=wafer_manifest,\n",
     "    label=True,\n",
     "    mask=False,\n",
@@ -284,7 +286,7 @@
     ")\n",
     "MAX_POINTS = 2000  # LayoutEditor uses 8191, gdstk default is 199\n",
     "microfluidics_design.write_gds(\n",
-    "    main_cell, \"designs/230410basilisk_s4.gds\", max_points=MAX_POINTS\n",
+    "    main_cell, \"designs/230412basilisk_s4.gds\", max_points=MAX_POINTS\n",
     ")"
    ]
   },
@@ -437,6 +439,7 @@
     "# region_heights = [35, 40, 35, 20]\n",
     "# region_heights = [35, 40, 35, 20, 20, 20]\n",
     "region_heights = [35, 90, 35, 20]\n",
+    "#region_heights = [30, 50, 20, 40]\n",
     "#region_heights = trench_md[\"region_heights\"]\n",
     "total_height = sum(region_heights)"
    ]
@@ -460,7 +463,7 @@
    },
    "outputs": [],
    "source": [
-    "graph = fov._get_fov_graph(packings, total_height)"
+    "graph = fov._get_fov_graph(packings)"
    ]
   },
   {
@@ -515,11 +518,21 @@
    },
    "outputs": [],
    "source": [
+    "min(np.int64(20), np.int64(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "fov_grids = fov.get_fov_grids_y(\n",
     "    fov_dims[fov_name][1],\n",
     "    region_heights,\n",
-    "    center_margins=False,\n",
-    "    allow_skipping=False,\n",
+    "    center_margins=True,\n",
     "    padding=1,\n",
     ")\n",
     "fov_grids"
@@ -533,7 +546,40 @@
    },
    "outputs": [],
    "source": [
+    "fov.fov_plot_offsets(fov_grids[0], fov_dims[fov_name][1], region_heights, num=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov.fov_plot_offsets(fov_grids[1], fov_dims[fov_name][1], region_heights, num=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "fov.fov_plot_offsets(fov_grids[2], fov_dims[fov_name][1], region_heights, num=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov.fov_plot_offsets(fov_grids[0], fov_dims[fov_name][1], region_heights, num=8)"
    ]
   },
   {
@@ -556,6 +602,52 @@
    "outputs": [],
    "source": [
     "fov.fov_plot([35, 190, 400], fov_dims[fov_name][1], region_heights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "total_height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "region_heights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "y = np.linspace(0,total_height,10)\n",
+    "y0 = 100\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "(y + y0) % total_height - y0"
    ]
   },
   {
