[microfluidics_design] Gave up on implementing bottom_shift, probably not useful. top_shift is done. Changed inequality in get_fov_positions to prevent extra row of FOVs added when grid bottom edge ends exactly at end of last trench set.

--- a/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
@@ -249,11 +249,10 @@
     "draw_fov_grids = True\n",
     "center_margins = False\n",
     "rotate = False\n",
-    "top_shift = 1\n",
-    "bottom_shift = 0\n",
+    "top_shift = -1\n",
     "for chip_name, chip in zip(chip_names, chips):\n",
     "    chip_fov_grids_df = fov.get_fov_grids_df(\n",
-    "        fov_dims, metadata[chip_name], center_margins=center_margins, top_shift=top_shift, bottom_shift=bottom_shift,\n",
+    "        fov_dims, metadata[chip_name], center_margins=center_margins, top_shift=top_shift,\n",
     "    )\n",
     "    fov_grids_df[chip_name] = chip_fov_grids_df\n",
     "    if draw_fov_grids:\n",
